--- a/app/src/main/res/menu/menu_filter_brapi.xml
+++ b/app/src/main/res/menu/menu_filter_brapi.xml
@@ -13,6 +13,12 @@
         android:icon="@drawable/ic_check_all"
         app:showAsAction="ifRoom" />
     <item
+        android:visible="false"
+        android:id="@+id/action_clear_filters"
+        android:title="@string/menu_filter_brapi_clear_filters"
+        android:icon="@drawable/delete_sweep"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_reset_cache"
         android:title="@string/menu_filter_brapi_reset_cache_title"
         android:icon="@drawable/ic_field_sync"
