--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,4 +41,6 @@
     <dimen name="fb_trait_fab_size">76dp</dimen>
     <dimen name="fb_trait_big_fab_size">176dp</dimen>
     <dimen name="fb_trait_fab_image_size">38dp</dimen>
+    <dimen name="fb_trait_status_bar_icon_default_max_size">25dp</dimen>
+
 </resources>
