--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -100,9 +100,20 @@
     <color name="circleBackgroundOuterColor">#FFFFFF</color>
 
     <!-- statistics activity heatmap observations colors -->
-    <color name="heatmap_color_low">#b2f2bb</color>
-    <color name="heatmap_color_medium">#69db7c</color>
-    <color name="heatmap_color_high">#40c057</color>
-    <color name="heatmap_color_max">#2f9e44</color>
+    <color name="main_heatmap_color_low">#b2f2bb</color>
+    <color name="main_heatmap_color_medium">#69db7c</color>
+    <color name="main_heatmap_color_high">#40c057</color>
+    <color name="main_heatmap_color_max">#2f9e44</color>
 
+    <!-- statistics activity heatmap observations colors for high contrast -->
+    <color name="high_heatmap_color_low">#626262</color>
+    <color name="high_heatmap_color_medium">#585858</color>
+    <color name="high_heatmap_color_high">#484848</color>
+    <color name="high_heatmap_color_max">#343434</color>
+
+    <!-- statistics activity heatmap observations colors for blue -->
+    <color name="blue_heatmap_color_low">#bda0bc</color>
+    <color name="blue_heatmap_color_medium">#01a7c2</color>
+    <color name="blue_heatmap_color_high">#6457a6</color>
+    <color name="blue_heatmap_color_max">#5c2751</color>
 </resources>
