--- a/app/src/main/res/layout/list_item_infobar.xml
+++ b/app/src/main/res/layout/list_item_infobar.xml
@@ -11,6 +11,7 @@
         android:id="@+id/list_item_infobar_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingEnd="8dp"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/list_item_infobar_value"
