--- a/app/src/main/res/xml/preferences_storage.xml
+++ b/app/src/main/res/xml/preferences_storage.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <PreferenceCategory
+        android:key="storage_definer"
+        android:title="@string/preferences_storage_storage_title"
+        app:iconSpaceReserved="false">
 
-    <Preference
-        android:icon="@drawable/ic_pref_general_root_directory"
-        android:key="DEFAULT_STORAGE_LOCATION_PREFERENCE"
-        android:summary="@string/preferences_storage_files_base_directory_description"
-        android:title="@string/preferences_storage_files_base_directory_title" />
+        <Preference
+            android:icon="@drawable/ic_pref_general_root_directory"
+            android:key="DEFAULT_STORAGE_LOCATION_PREFERENCE"
+            android:summary="@string/preferences_storage_files_base_directory_description"
+            android:title="@string/preferences_storage_files_base_directory_title" />
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="database_operations"
