adds media keycode actions experimental feature

--- a/app/src/main/res/xml/preferences_experimental.xml
+++ b/app/src/main/res/xml/preferences_experimental.xml
@@ -50,6 +50,13 @@
             android:summary="@string/pref_alpha_enhanced_brapi_import_summary"
             android:title="@string/pref_alpha_brapi_import_title" />
 
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/gamepad"
+            android:key="com.tracker.fieldbook.preferences.keys.enable_media_keycode_events"
+            android:summary="@string/pref_alpha_media_keycode_events_summary"
+            android:title="@string/pref_alpha_media_keycode_events_title" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
