closes #1049 added preference that clears settings

--- a/app/src/main/res/xml/preferences_system.xml
+++ b/app/src/main/res/xml/preferences_system.xml
@@ -35,6 +35,11 @@
             android:summary="@string/preferences_general_share_enable_description"
             android:title="@string/preferences_general_share_enable" />
 
+        <Preference
+            android:icon="@drawable/ic_refresh"
+            android:key="RESET_PREFERENCES"
+            android:title="@string/preferences_system_defaults_reset" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
