--- a/app/src/main/res/layout/activity_fields.xml
+++ b/app/src/main/res/layout/activity_fields.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="?attr/fb_color_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -21,6 +22,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.fieldbook.tracker.views.SearchBar
+            android:id="@+id/act_fields_sb"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/act_list_filter_tb" />
+
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/main_content"
             android:layout_width="match_parent"
@@ -30,7 +38,9 @@
             android:id="@+id/fieldRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="5dp" />
+            android:padding="5dp"
+            tools:listitem="@layout/list_item_field_recycler"
+            tools:itemCount="3"/>
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </LinearLayout>
