--- a/app/src/main/res/layout/activity_fields.xml
+++ b/app/src/main/res/layout/activity_fields.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="?attr/fb_color_background"
+    android:id="@+id/field_editor_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -23,6 +24,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.fieldbook.tracker.views.SearchBar
+            android:visibility="gone"
             android:id="@+id/act_fields_sb"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
