--- a/app/src/main/res/layout/dialog_field_file_import.xml
+++ b/app/src/main/res/layout/dialog_field_file_import.xml
@@ -3,16 +3,15 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingLeft="20dp"
-    android:paddingTop="5dp"
-    android:paddingRight="20dp"
-    android:paddingBottom="5dp">
+    android:layout_margin="16dp"
+    android:padding="16dp">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="5dp"
+        android:padding="8dp"
+        android:layout_margin="8dp"
         android:weightSum="1">
 
         <TextView style="@style/TextViewStyle.Bold.Title"
