--- a/app/src/main/res/layout/list_item_study.xml
+++ b/app/src/main/res/layout/list_item_study.xml
@@ -19,6 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintVertical_bias="0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -27,9 +29,10 @@
             android:id="@+id/list_item_study_title_tv"
             style="@style/TextViewStyle.Bold.Title"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_margin="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:gravity="center_vertical"
+            app:layout_constraintBottom_toTopOf="@id/list_item_study_units_chip"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/list_item_study_pb"
@@ -46,7 +49,7 @@
             android:checkable="false"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/list_item_study_title_tv"
+            app:layout_constraintTop_toBottomOf="@id/list_item_study_pb"
             tools:text="108"/>
 
         <com.google.android.material.chip.Chip
@@ -59,7 +62,7 @@
             android:checkable="false"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@id/list_item_study_units_chip"
-            app:layout_constraintTop_toBottomOf="@id/list_item_study_title_tv"
+            app:layout_constraintTop_toBottomOf="@id/list_item_study_pb"
             tools:text="2" />
 
         <com.google.android.material.chip.Chip
@@ -72,7 +75,7 @@
             android:checkable="false"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@id/list_item_study_traits_chip"
-            app:layout_constraintTop_toBottomOf="@id/list_item_study_title_tv"
+            app:layout_constraintTop_toBottomOf="@id/list_item_study_pb"
             tools:text="Manhattan, KS" />
 
         <com.google.android.material.chip.Chip
