added crop region preview for camerax added new color that defines inverted crop region color updated list item image to fit center rather than crop updated camerax to 1.4.1

--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -20,7 +20,7 @@
 
         <ImageView
             android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             tools:src="@raw/chip"
             android:id="@+id/list_item_image_iv"
             android:layout_width="match_parent"
