--- a/app/src/main/res/layout/app_intro_optional_setup_slide.xml
+++ b/app/src/main/res/layout/app_intro_optional_setup_slide.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_primary_transparent"
     android:orientation="vertical">
 
     <TextView
@@ -24,11 +22,25 @@
         android:layout_gravity="center"
         android:text="" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/setup_rv"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        android:orientation="vertical">
 
+        <com.fieldbook.tracker.views.OptionalSetupItem
+            android:id="@+id/load_sample_data"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <com.fieldbook.tracker.views.OptionalSetupItem
+            android:id="@+id/enable_tutorial"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <com.fieldbook.tracker.views.OptionalSetupItem
+            android:id="@+id/high_contrast_theme"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 </LinearLayout>
